--- a/setup.cfg
+++ b/setup.cfg
@@ -17,10 +17,11 @@ classifiers =
 packages = find_namespace:
 package_dir =
             = src
-python_requires = >=3.10
+python_requires = >=3.9
 install_requires =
                  geopandas
                  rtree  # for bounding box clipping with geopandas
+                 importlib_resources; python_version<'3.10' # for py3.9-compatible backport of importlib.resources.files()
 [options.packages.find]
 where = src
 [options.package_data]
