--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,16 @@
 [tox]
-envlist = py310
+envlist = py310, py39
 # https://tox.wiki/en/latest/example/package.html
 isolated_build = True
 
-[testenv]
+[testenv:py310]
 deps =
      pytest
      rtree
+[testenv:py39]
+deps =
+     pytest
+     rtree
+     importlib_resources
 commands =
          pytest
