--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -9,6 +9,7 @@ on:
       - master
     tags:
       - '*'
+  workflow_dispatch:  # This enables manual triggering
 
 jobs:
   build-n-publish:
@@ -33,7 +34,6 @@ jobs:
         --sdist
         --wheel
         --outdir dist/
-        .
     - name: Publish distribution to Test PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
       if: ${{ !startsWith(github.ref, 'refs/tags') }}
