publish dev branch commits to pypi

--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -8,6 +8,7 @@ on:
   push:
     branches:
       - master
+      - dev
     tags:
       - '*'
     workflow_dispatch:  # This enables manual triggering
