--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -22,6 +22,21 @@ jobs:
     - uses: actions/checkout@v4
       with:
         persist-credentials: false
+    - name: Create dev version for TestPyPI  # <-- ADD THIS STEP
+      if: github.ref == 'refs/heads/dev'
+      run: |
+        pip install tomli-w tomli
+        python -c "
+import tomli, tomli_w
+with open('pyproject.toml', 'rb') as f:
+    data = tomli.load(f)
+current = data['project']['version']
+dev_version = f'{current}.dev${{ github.run_number }}'
+print(f'Creating dev version: {dev_version}')
+data['project']['version'] = dev_version
+with open('pyproject.toml', 'wb') as f:
+    tomli_w.dump(data, f)
+"
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
