fix logic error in GitHub workflow
-  When you push a tag, github.ref_name will be the tag name (like
v1.0.0), not the branch name (main).  This was causing the "publish to
PyPi" step to skip on a tag because it required both a tag AND
branch == main.

The condition should check if it's a tag push, regardless of which
branch it's on.

--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -59,7 +59,7 @@ jobs:
   publish-to-pypi:
     name: >-
       Publish Python 🐍 distribution 📦 to PyPI
-    if: github.ref_type == 'tag' && github.ref_name == 'main'
+    if: github.ref_type == 'tag'
     needs:
     - build
     runs-on: ubuntu-latest
