remove python version pin in docs environment

--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -1,6 +1,7 @@
-name: venv-nzgeom-devel
+name: nzgeom-devel
 dependencies:
-  - python=3.10
+  - python
+  - pip
   - geopandas
   - rtree
   - nzgeom
